Fix overflow styling for team select component

--- a/src/app/teams/teams.module.scss
+++ b/src/app/teams/teams.module.scss
@@ -30,9 +30,12 @@
 }
 
 .user_teams {
-  width: 100%;
-  padding: 15px 10px;
+  max-width: 100%;
+  padding: 15px 10px 5px 10px;
   display: flex;
+  overflow-x: auto;
+
+  margin-bottom: 10px;
 
   > * {
     margin-right: 10px;
@@ -44,6 +47,8 @@
   border-left: 4px solid #F36A6A;
   width: 168px;
   height: 132px;
+
+  flex-shrink: 0;
 
   opacity: 0.5;
 
@@ -73,6 +78,7 @@
 .create_team_icon {
   opacity: 0.5;
   transition: opacity 200ms;
+
 }
 
 .create_team {
@@ -84,6 +90,9 @@
   height: 132px;
   width: 168px;
   border: 1px dashed #AAAAAA;
+
+  flex-shrink: 0;
+
 
   cursor: pointer;
   transition: border-color 200ms;
